examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__pattern_matching__match_kwargs_2.snap
---
source: examples/ast-python/src/tests/corpus/pattern_matching.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 35,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 2,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 34,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 33,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Assignment(
            Assignment {
                left: AstNodeId {
                    id: 3,
                    _marker: PhantomData<ast_python::generated::Pattern_PatternList>,
                },
                right: Some(
                    AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_ExpressionList_PatternList_Yield>,
                    },
                ),
                Type: None,
                _range: Range {
                    start_byte: 1,
                    end_byte: 34,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 33,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        Pattern(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 1,
                        end_byte: 6,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 5,
                        },
                    },
                    _id: 3,
                    _parent: Some(
                        2,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Call(
                    Call {
                        arguments: AstNodeId {
                            id: 6,
                            _marker: PhantomData<ast_python::generated::ArgumentList_GeneratorExpression>,
                        },
                        function: AstNodeId {
                            id: 5,
                            _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                        },
                        _range: Range {
                            start_byte: 9,
                            end_byte: 34,
                            start_point: Point {
                                row: 1,
                                column: 8,
                            },
                            end_point: Point {
                                row: 1,
                                column: 33,
                            },
                        },
                        _id: 4,
                        _parent: Some(
                            2,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Identifier(
            Identifier {
                _range: Range {
                    start_byte: 9,
                    end_byte: 14,
                    start_point: Point {
                        row: 1,
                        column: 8,
                    },
                    end_point: Point {
                        row: 1,
                        column: 13,
                    },
                },
                _id: 5,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        ArgumentList(
            ArgumentList {
                children: [
                    AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_python::generated::DictionarySplat_Expression_KeywordArgument_ListSplat_ParenthesizedExpression>,
                    },
                    AstNodeId {
                        id: 10,
                        _marker: PhantomData<ast_python::generated::DictionarySplat_Expression_KeywordArgument_ListSplat_ParenthesizedExpression>,
                    },
                ],
                _range: Range {
                    start_byte: 14,
                    end_byte: 34,
                    start_point: Point {
                        row: 1,
                        column: 13,
                    },
                    end_point: Point {
                        row: 1,
                        column: 33,
                    },
                },
                _id: 6,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        KeywordArgument(
            KeywordArgument {
                name: AstNodeId {
                    id: 8,
                    _marker: PhantomData<ast_python::generated::Identifier>,
                },
                value: AstNodeId {
                    id: 9,
                    _marker: PhantomData<ast_python::generated::Expression>,
                },
                _range: Range {
                    start_byte: 15,
                    end_byte: 26,
                    start_point: Point {
                        row: 1,
                        column: 14,
                    },
                    end_point: Point {
                        row: 1,
                        column: 25,
                    },
                },
                _id: 7,
                _parent: Some(
                    6,
                ),
                _is_missing: false,
            },
        ),
        Identifier {
            _range: Range {
                start_byte: 15,
                end_byte: 20,
                start_point: Point {
                    row: 1,
                    column: 14,
                },
                end_point: Point {
                    row: 1,
                    column: 19,
                },
            },
            _id: 8,
            _parent: Some(
                7,
            ),
            _is_missing: false,
        },
        PrimaryExpression(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 21,
                        end_byte: 26,
                        start_point: Point {
                            row: 1,
                            column: 20,
                        },
                        end_point: Point {
                            row: 1,
                            column: 25,
                        },
                    },
                    _id: 9,
                    _parent: Some(
                        7,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Identifier(
                    Identifier {
                        _range: Range {
                            start_byte: 28,
                            end_byte: 33,
                            start_point: Point {
                                row: 1,
                                column: 27,
                            },
                            end_point: Point {
                                row: 1,
                                column: 32,
                            },
                        },
                        _id: 10,
                        _parent: Some(
                            6,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
    ],
}
