examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__pattern_matching__matching_multiple_values.snap
---
source: src/tests/corpus/pattern_matching.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            MatchStatement(
                MatchStatement {
                    body: Block {
                        alternative: [
                            CaseClause {
                                guard: None,
                                consequence: Block {
                                    alternative: [],
                                    children: [
                                        CompoundStatement(
                                            ForStatement(
                                                ForStatement {
                                                    body: Block {
                                                        alternative: [],
                                                        children: [
                                                            SimpleStatement(
                                                                ExpressionStatement(
                                                                    ExpressionStatement {
                                                                        children: [
                                                                            Expression(
                                                                                PrimaryExpression(
                                                                                    Call(
                                                                                        Call {
                                                                                            function: Attribute(
                                                                                                Attribute {
                                                                                                    attribute: Identifier {
                                                                                                        [RANGE]
                                                                                                    },
                                                                                                    object: Identifier(
                                                                                                        Identifier {
                                                                                                            [RANGE]
                                                                                                        },
                                                                                                    ),
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                            arguments: ArgumentList(
                                                                                                ArgumentList {
                                                                                                    children: [
                                                                                                        Expression(
                                                                                                            PrimaryExpression(
                                                                                                                Identifier(
                                                                                                                    Identifier {
                                                                                                                        [RANGE]
                                                                                                                    },
                                                                                                                ),
                                                                                                            ),
                                                                                                        ),
                                                                                                        Expression(
                                                                                                            PrimaryExpression(
                                                                                                                Identifier(
                                                                                                                    Identifier {
                                                                                                                        [RANGE]
                                                                                                                    },
                                                                                                                ),
                                                                                                            ),
                                                                                                        ),
                                                                                                    ],
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                            [RANGE]
                                                                                        },
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ],
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ),
                                                        ],
                                                        [RANGE]
                                                    },
                                                    alternative: None,
                                                    right: Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    left: Pattern(
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ],
                                    [RANGE]
                                },
                                children: [
                                    CasePattern {
                                        children: Some(
                                            ListPattern(
                                                ListPattern {
                                                    children: [
                                                        CasePattern(
                                                            CasePattern {
                                                                children: Some(
                                                                    String(
                                                                        String {
                                                                            children: [
                                                                                StringStart(
                                                                                    StringStart {
                                                                                        [RANGE]
                                                                                    },
                                                                                ),
                                                                                StringContent(
                                                                                    StringContent {
                                                                                        children: [],
                                                                                        [RANGE]
                                                                                    },
                                                                                ),
                                                                                StringEnd(
                                                                                    StringEnd {
                                                                                        [RANGE]
                                                                                    },
                                                                                ),
                                                                            ],
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                                [RANGE]
                                                            },
                                                        ),
                                                        CasePattern(
                                                            CasePattern {
                                                                children: Some(
                                                                    SplatPattern(
                                                                        SplatPattern {
                                                                            children: Some(
                                                                                Identifier {
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                ],
                                [RANGE]
                            },
                        ],
                        children: [],
                        [RANGE]
                    },
                    subject: [
                        PrimaryExpression(
                            Call(
                                Call {
                                    function: Attribute(
                                        Attribute {
                                            attribute: Identifier {
                                                [RANGE]
                                            },
                                            object: Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                            [RANGE]
                                        },
                                    ),
                                    arguments: ArgumentList(
                                        ArgumentList {
                                            children: [],
                                            [RANGE]
                                        },
                                    ),
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
